@@ -1,6 +1,8 @@
 Revision history for MooseX-Types
 
 {{$NEXT}}
+        - types are now properly installed into the proper package, so they
+          survive namespace::autoclean
 
 0.39      2013-11-30 18:31:32Z
         - more strict warnings checking in tests
